import React from "react";
import { render } from "@testing-library/react";
import ESIconButton from "../ESIconButton";
import { SettingsIcon } from "lucide-react";

test("It renders without crashing", () => {
  const component = render(
    <ESIconButton variant={"primary"}>
      <SettingsIcon />
    </ESIconButton>,
  );
  expect(component).toBeTruthy();
});

it("Primary matches DOM Snapshot", () => {
  const domTree = render(
    <ESIconButton variant={"primary"}>
      <SettingsIcon />
    </ESIconButton>,
  );
  expect(domTree).toMatchSnapshot();
});

it("Secondary matches DOM Snapshot", () => {
  const domTree = render(
    <ESIconButton variant={"secondary"}>
      <SettingsIcon />
    </ESIconButton>,
  );
  expect(domTree).toMatchSnapshot();
});

it("Teritary matches DOM Snapshot", () => {
  const domTree = render(
    <ESIconButton variant={"tertiary"}>
      <SettingsIcon />
    </ESIconButton>,
  );
  expect(domTree).toMatchSnapshot();
});

it("Destructive matches DOM Snapshot", () => {
  const domTree = render(
    <ESIconButton variant={"destructive"}>
      <SettingsIcon />
    </ESIconButton>,
  );
  expect(domTree).toMatchSnapshot();
});

it("Branded matches DOM Snapshot", () => {
  const domTree = render(
    <ESIconButton variant={"branded"}>
      <SettingsIcon />
    </ESIconButton>,
  );
  expect(domTree).toMatchSnapshot();
});
